# luna

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  readme.md
.github/workflows/: release.yml
src/: ai.rs  commands.rs  completer.rs  config.rs  learner.rs  main.rs  memory.rs  safety.rs  setup.rs  shell.rs  stats.rs
